# ajiasu-proxy

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.control-plane  Dockerfile.gateway  README.md  deny.toml  go.mod  go.sum  rust-toolchain.toml  sqlc.yaml  tools.go
.github/workflows/: agent-ci.yml  compose-ci.yml  control-plane-ci.yml  gateway-ci.yml  helm-ci.yml  release-hardening.yml  runner-ci.yml  scheduler-ci.yml
api/openapi/: control-plane.yaml
api/proto/: buf.gen.yaml  buf.yaml
cmd/control-plane/: admin.go  admin_test.go  compose.go  compose_test.go  lifecycle.go  lifecycle_test.go  main.go  migration.go  migration_test.go  runtime.go  runtime_test.go  sigterm_test.go
cmd/phase9-load/: main.go  main_test.go
console/: index.html  package-lock.json  package.json  vite.config.ts
console/src/: api.ts  main.tsx  shell.tsx  styles.css
crates/agent/: Cargo.toml
crates/agent-protocol/: Cargo.toml  build.rs
crates/agent-protocol/src/: lib.rs
crates/agent/src/: cli.rs  client.rs  commands.rs  config.rs  inventory.rs  lib.rs  main.rs  private_file.rs  relay.rs  relay_server.rs  route_grant.rs  secret.rs  session.rs
crates/agent/src/runtime/: docker.rs  mod.rs  process.rs
crates/agent/tests/: sigterm.rs
crates/gateway/: Cargo.toml
crates/gateway-protocol/: Cargo.toml  build.rs
crates/gateway-protocol/src/: lib.rs
crates/gateway/src/: auth.rs  cli.rs  config.rs  control.rs  control_client.rs  lib.rs  limits.rs  main.rs  private_file.rs  relay.rs  routes.rs  secret.rs  server.rs  session.rs
crates/gateway/tests/: sigterm.rs
crates/proxy-policy/: Cargo.toml
crates/proxy-policy/src/: cidr.rs  dns.rs  domain.rs  evaluator.rs  lib.rs  limits.rs  port.rs
crates/proxy-protocol/: Cargo.toml
crates/runner-relay/: Cargo.toml
deploy/compose/: backup-manifest.schema.json  compose.dependencies.yaml  compose.development.yaml  compose.production.yaml  compose.yaml  configuration-matrix.yaml  postgres-init.sh  release-manifest.schema.json
deploy/recovery/: phase9-restore-evidence.example.json  phase9-restore-evidence.schema.json
docs/adr/: 0001-runner-security-boundary.md  0002-agent-runtime-boundary.md  0003-gateway-relay-boundary.md  0004-scheduler-fencing-boundary.md  0005-compose-runtime-boundary.md
docs/compliance/: ajiasu-usage-gate.md
docs/operations/: compatibility-matrix.md  compose-lifecycle.md  compose-recovery-upgrade.md  control-plane-phase2.md  control-plane-phase3.md  control-plane-phase4.md  control-plane-phase6.md  docker-compose-phase7.md  gateway-phase5.md  helm-kubernetes-phase8.md  phase8-exit-evidence.md  phase9-exit-evidence.md  phase9-recovery-capacity.md  phase9-runbooks.md  runner-image.md
docs/releases/: release-notes-template.md
internal/accounts/: http.go  model.go  service.go
internal/audit/: http.go  integration_test.go  model.go  reader.go  repository.go  service.go  service_test.go
internal/endpoints/: http.go  model.go  model_phase6_test.go  service.go
internal/gateways/: grpc_server.go  grpc_server_test.go  model.go  service.go  snapshot.go  snapshot_provider.go  snapshot_provider_test.go  snapshot_test.go  usage.go  usage_test.go
internal/health/: evaluator.go  evaluator_test.go  model.go
internal/identity/: auth_service.go  csrf.go  csrf_test.go  http.go  http_test.go  keycloak_integration_test.go  local.go  local_test.go  oidc.go  oidc_provider_test.go  oidc_test.go  password.go  password_test.go  service_identity.go  service_identity_isolation_test.go  service_identity_test.go  session.go  session_test.go  totp.go  totp_test.go
internal/nodes/: grpc_server.go  http.go  model.go  service.go  stream_registry.go  stream_registry_test.go
internal/observability/: metrics.go  metrics_test.go
internal/operations/: http.go  model.go  service.go
internal/pools/: http.go  model.go  service.go
internal/proxyaccess/: http.go  policy.go  policy_test.go  service.go  service_test.go
internal/reconciler/: force.go  http.go  protocol.go  service.go  worker.go
internal/scheduler/: http.go  lease.go  lease_test.go  migration.go  migration_test.go  model.go  redis.go  (+6 more)
migrations/: 00001_platform_foundation.sql  00002_audit_outbox.sql  00003_tenancy.sql  00004_local_identity.sql  00005_oidc_sessions.sql  00006_service_identities.sql  00007_idempotency.sql  00008_accounts_pools_quotas.sql  00009_nodes_endpoints_operations.sql  00010_gateway_access_policy.sql  00011_scheduler_leases_health.sql
scripts/: agent-ci.ps1  ci.ps1  compose-admin-bootstrap.ps1  compose-agent-enroll.ps1  compose-backup.ps1  compose-ci.ps1  compose-ci.test.ps1  compose-common.ps1  compose-down.ps1  compose-gateway-enroll.ps1  compose-image-ci.ps1  compose-init.ps1  compose-init.test.ps1  compose-lifecycle.test.ps1  compose-model.test.ps1  compose-recovery.test.ps1  compose-restore.ps1  compose-rollback.ps1  compose-status.ps1  compose-up.ps1  compose-upgrade.ps1  control-plane-ci.ps1  control-plane-ci.test.ps1  gateway-ci.ps1  helm-common.ps1  helm-drain.ps1  helm-install.ps1  helm-preflight.ps1  helm-rollback.ps1  helm-status.ps1  lock-compose-images.ps1  lock-compose-images.test.ps1  lock-control-plane-images.ps1  lock-control-plane-images.test.ps1  phase9-release-verify.ps1  phase9-restore-rehearsal.ps1  scheduler-ci.ps1  scheduler-ci.test.ps1
testdata/: phase8-release-manifest.example.yaml
(+209 files in other folders)
