[workspace]
members = ["crates/agent-protocol", "crates/agent"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
async-trait = "0.1"
bollard = "0.17"
bytes = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
zeroize = { version = "1", features = ["derive"] }
