[workspace]
members = ["crates/agent-protocol", "crates/gateway-protocol", "crates/agent", "crates/proxy-policy", "crates/proxy-protocol", "crates/runner-relay", "crates/gateway"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
async-trait = "0.1"
argon2 = "0.5"
bollard = "0.17"
bytes = "1"
ed25519-dalek = "2"
hex = "0.4"
idna = "1"
ipnet = { version = "2", features = ["serde"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tar = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
zeroize = { version = "1", features = ["derive"] }
