[package]
name = "ajiasu-agent-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
