[package]
name = "ajiasu-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ajiasu-gateway-protocol = { path = "../gateway-protocol" }
ajiasu-proxy-policy = { path = "../proxy-policy" }
ajiasu-proxy-protocol = { path = "../proxy-protocol" }
argon2.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true
