[package]
name = "ajiasu-proxy-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
idna.workspace = true
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
